# Coco2CustomVision

./: .flake8  .gitignore  LICENSE  README.md  pre-commit.bat  pyproject.toml  pytest.ini.template  requirements.txt  sample_coco.json  setup.cfg
.github/workflows/: cd.yml  ci.yml
coco2customvision/: __init__.py  azure_blob.py  import_coco.py  integration.py  version.py
src/: conftest.py
src/coco2customvision/: __init__.py  __main__.py  cli.py  coco.py  custom_vision.py  export_coco.py  integration.py  utils.py
tests/: conftest.py  test_azure_blob.py  test_custom_vision.py  test_export_coco.py  test_import_coco.py  test_integration.py  test_version.py
