[metadata]
name = coco2customvision
description = Tool to backup custom vision projects to COCO files and vise versa
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
classifiers =
    Environment :: Console
    License :: OSI Approved :: MIT License
    Topic :: System :: Archiving :: Backup
maintainer=RnD Azure Script
maintainer_email=rndazurescript@users.noreply.github.com
home_page = https://github.com/rndazurescript/Coco2CustomVision
keywords = ["custom-vision", "coco", "blob-storage", "backup", "azure"]
readme = README.md
repository = https://github.com/rndazurescript/Coco2CustomVision
platforms=any

[options]
packages=find:

[options.packages.find]
exclude=
   tests
   tests.*
   .vscode

[options.entry_points]
console_scripts =
    coco2customvision = coco2customvision:cli

[flake8]
max-line-length = 120
max-complexity = 10
ignore =
    E203 # [psf/black#280](https://github.com/psf/black/issues/280)
    W503 # https://github.com/psf/black/issues/52
