[metadata]
name = coco2customvision
version = 0.1
description = Tool to backup custom vision projects to COCO files and vise versa
long_description = file: README.md
long_description_content_type = text/markdown
maintainer = RnD Azure Script
maintainer_email = rndazurescript@users.noreply.github.com
license = MIT
license_file = LICENSE
platforms = any
classifiers =
    Environment :: Console
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: System :: Archiving :: Backup
home_page = https://github.com/rndazurescript/Coco2CustomVision
keywords = 
    custom-vision
    coco
    blob-storage
    backup
    azure
readme = README.md
repository = https://github.com/rndazurescript/Coco2CustomVision

[options]
packages = find:
install_requires =
    azure-cognitiveservices-vision-customvision>=3.1
    azure.storage.blob>=12.8
    click>=8
    tqdm>=4.61
python_requires = >=3.6
package_dir =
    = src

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    coco2customvision = coco2customvision:cli

[options.extras_require]
dev =
    black
    flake8
    pytest
    pytest-env
    setup-cfg-fmt
    setuptools_scm

[flake8]
max-line-length = 120
max-complexity = 10
ignore =
    E203 # [psf/black#280](https://github.com/psf/black/issues/280)
    W503 # https://github.com/psf/black/issues/52
